...
            errorMessage = "Invalid email format.";
            break;
          case "auth/user-not-found":
            errorMessage = "No account found with this email.";
            break;
          case "auth/wrong-password":
            errorMessage = "Incorrect password. Try again.";
            break;
          case "auth/too-many-requests":
            errorMessage = "Too many login attempts. Try later.";
            break;
          default:
            errorMessage = error.message;
...
        secureTextEntry
      />
      {passwordError && <Text style={styles.invalidText}> {passwordError} </Text>}


      {/* Login Button */}
      <AuthenticationButton testID="login-button" onPress={handleLoginWithFirebase} bgColor={"#ff008c"} title={"Login"} textColor={"#fff"} buttonWidth={"100%"} isLoading={isLoading} />
    
      {/* Register Link */}
      < View style={styles.registerContainer} >
        <Text style={styles.registerText}> Don't have an account? </Text>
        < TouchableOpacity testID="register-button" onPress={() => navigation.navigate("Signup")}>
          <Text style={styles.registerLink}> Register here </Text>
...
